// Global configuration options for this repository.
syntax = "proto2";

package phd;

// The root message describing the repository configuration.
//
// A plaintext format instance of this message is generated in the root of this
// repository by the ./configure script, with path ./config.pbtxt.
message GlobalConfig {
  // Either "darwin" or "linux" for macOS or Linux host OS, respectively.
  required string uname = 1;
  // An identifying sha256 string generated by ./configure and used to determine
  // whether or not the configuration process needs to be run.
  required string configure_id = 2;
  // Whether or not the repository is configured to use CUDA.
  // TODO(cec): Remove this field now that 'options' field exists.
  required bool with_cuda = 100;
  // Configuration options.
  required GlobalConfigOptions options = 3;
  // Important paths.
  required GlobalConfigPaths paths = 4;
}

message GlobalConfigOptions {
  required bool with_cuda = 1;
  required bool update_git_submodules = 2;
  required bool symlink_python = 3;
  required bool install_git_hooks = 4;
}

// A list of absolute paths to import system files and directories.
message GlobalConfigPaths {
  // The root directory of the repository.
  required string repo_root = 1;
  // The path of the system python.
  required string python = 2;
}
